--- a/_layouts/linkitem.html
+++ b/_layouts/linkitem.html
@@ -18,7 +18,7 @@
   <a href=" {{ site.baseurl }}/resources/{{ entry.slides }}">[slides]</a>
   {% endif %}
   {% if entry.abstract %}
-  <button class="aslink" data-toggle="collapse" data-target="#{{entry.key}}_abstract">[Abstract]</button>
+  <button class="aslink" data-toggle="collapse" data-target="#{{entry.key}}_abstract">[abstract]</button>
   {% endif %}
   <button class="aslink" data-toggle="collapse" data-target="#{{entry.key}}_bibtex">[BibTex]</button>
   <div>
