--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="en">
   {% include html_head.html %}
   <body>
+    {% include mobile_nav.html %}
+    
     <div class="right">
       {{ content }}
     </div>
