--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -2,10 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Formal semantics and pragmatics, philosophy of language, logic.">
-  <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/{{ site.bootstrap_version }}/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{ site.jquery_version }}/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/{{ site.bootstrap_version }}/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/{{ site.assets_dir }}/css/bundle.css">
   <link type="text/css" rel="stylesheet" title="style" href="{{ site.baseurl }}/style/style.css" />
   <link rel="shortcut icon" href="{{ site.baseurl }}/style/favicon.ico">
   <title>{{ page.title }}</title>
