--- a/_layouts/indefinites.html
+++ b/_layouts/indefinites.html
@@ -18,5 +18,10 @@
       <a href="{{ site.baseurl }}/Indefinites/results">Results</a><br/><br/>
       <a href="{{ site.baseurl }}/Indefinites/contact">Contact</a><br/><br/>
     </div>
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript>
+      <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" />
+    </noscript>
+    <script src="{{ site.baseurl }}/{{ site.assets_dir }}/js/bundle.js"></script>
   </body>
 </html>
